@@ -1,5 +1,11 @@
 2015-02-25  Andrew Burgess  <andrew.burgess@embecosm.com>
 
+	* objcopy.c (init_section_add): New function.
+	(section_add_load_file): New function.
+	(copy_main): Make use of new functions.
+
+2015-02-25  Andrew Burgess  <andrew.burgess@embecosm.com>
+
 	* od-elf32_avr.c: Add elf32-avr.h include.
 	(OPT_AVRPROP): Define.
 	(options[]): Add 'avr-prop' entry.
